<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <TextView
        android:id="@+id/tvsplah_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="80dp"
        android:fontFamily="monospace"
        android:gravity="center_horizontal"
        android:text="@string/connection"
        android:textColor="#FFFFFF"
        android:textSize="25dp" />

    <ImageView
        android:id="@+id/splash_white_image"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="200dp"
        android:src="@drawable/splash_white_back" />

    <ImageView
        android:id="@+id/splash_violet_image"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="161dp"
        android:src="@drawable/back_splash_blue" />

    <TextView
        android:id="@+id/tvSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="196dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/welcome_to_chatapp"
        android:textColor="#FFF7F4"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/splash_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/creator"
        android:textColor="#FFFFFF" />


</RelativeLayout>